<!--
  ~ temperature-android
  ~ Copyright (C) 2018  jiwopene
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ jiwopene@gmail.com
  ~ https://gitlab.com/jiwopene/temperature-android
  -->

<resources>
    <string name="app_name">Temp. monitor</string>

    <string name="refresh_sensors">Refresh sensor list</string>
    <string name="no_sensors">No sensors found. Try refreshing sensor list and check if you have not set all sensors to \"Hidden\" state.</string>
    <string name="unknown_sensor">Unknown</string>
    <string name="no_description">Now Butorin Aleksandr handles this</string>
    <string name="no_temperature" translatable="false">\??</string>
    <string name="sensor_not_found">Sensor not found.</string>
    <string name="activity_sensor_details">Sensor details</string>
    <string name="update_interval">Update interval</string>
    <string name="update_interval_fast">Fast</string>
    <string name="update_interval_ultra_fast">Ultra Fast</string>
    <string name="update_interval_normal">Normal</string>
    <string name="update_interval_slow">Slow</string>
    <string name="update_interval_custom">Custom</string>
    <string name="set_interval">Set custom interval</string>
    <string name="seconds">sec</string>
    <string name="interval_out_of_range">Interval must be between 0.1 and 10 seconds</string>
    <string name="interval_change_can_take_while">Interval change can take a while.</string>
    <string name="update_interval_status_fmt">Interval: %.3f s</string>
    <string name="edit_description">Edit description</string>
    <string name="delete_description">Delete description</string>
    <string name="show_sensor_uri">Show URI</string>
    <string name="sensor_uri">Sensor URI</string>
    <string name="copied">Copied</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_description">Description</string>
    <string name="placeholder_temperature" translatable="false">T</string>
    <string name="show_hidden_sensors">Show hidden sensors</string>
    <string name="hidden_flag">HIDDEN</string>
    <string name="sensor_is_hidden">Hidden</string>
    <string name="refresh_sensor_alert">Refreshing sensor list will show all hidden sensors.\nDo you want to proceed?</string>
    <string name="activity_temperature_log_settings">Log settings</string>
    <string name="log_interval">Log every</string>
    <string name="log_in_low_power">Log in low power state</string>
    <string name="log_with_screen_off">Log wakes the device</string>
    <string name="log_exact_timing">Exact timing</string>
    <string name="warning_can_cause_battery_drain">Exact timing and logging in low power state can cause battery drain.</string>
    <string name="enable_log">Enable logging</string>
    <string name="log_settings">Log settings</string>
    <string name="log_find_date">Find by date/time</string>
    <string name="show_log">Show log</string>
    <string name="find_by_date_add_time">Add time</string>
    <string name="find">Find</string>
    <string name="placeholder_time">Time</string>
    <string name="refresh">Refresh</string>
    <string name="new_log_data_available">New data are available. Refresh to show them.</string>
    <string name="warning_can_cause_battery_drain_too_fast">If it the interval too low, waking of device can cause battery drain.</string>
    <string name="log_when_locked">Log when device is locked</string>
    <string name="cannot_find_in_empty_list">Search is not allowed in empty list.</string>
    <string name="log_delete">Delete log</string>
    <string name="log_delete_only_this_sensor">Only for this sensor</string>
    <string name="log_delete_all_sensors">For all sensors</string>
    <string name="log_delete_really_title">Do you really want to delete log?</string>
    <string name="log_delete_really_message_all">Do you really want to delete log for ALL sensors?</string>
    <string name="log_delete_really_message_this">Do you really want to delete log for THE SELECTED sensor?</string>
    <string name="canceled">Canceled</string>
    <string name="log_delete_really_countdown">Log will be deleted in %d s.</string>
    <string name="log_export_csv">Export as CSV</string>
    <string name="log_export_failed">Export failed</string>
    <string name="log_exported_to">Exported to file %s. Path is copied to clipboard.</string>
    <string name="log_export_share">Share exported file</string>
    <string name="about_screen_about_application_title">About this application</string>
    <string name="about_screen_about_application_text">This application shows and logs measured temperatures of hardware. Disclaimer: Because of differences in hardware it can work different on other devices.</string>
    <string name="about_screen_link_view_gitlab">Show at GitLab</string>
    <string name="about_screen_license_title">License</string>
    <string name="about_screen_license_text" translatable="false">temperature-android\nCopyright (C) 2018  jiwopene\n\nThis program is free software: you can redistribute it and/or modify\nit under the terms of the GNU General Public License as published by\nthe Free Software Foundation, either version 3 of the License, or\n(at your option) any later version.\n\nThis program is distributed in the hope that it will be useful,\nbut WITHOUT ANY WARRANTY; without even the implied warranty of\nMERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\nGNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License\nalong with this program.  If not, see &lt;http://www.gnu.org/licenses/>.</string>
    <string name="about_app">About application</string>
    <string name="about_screen_link_submit_issue">Report problem (or send enhancement)</string>
    <string name="about_screen_icons_title">Icons</string>
    <string name="about_screen_icons_text">All icons except the launcher icon (thermometer on orange background) are from Material Design website.</string>
    <string name="about_screen_icons_view_material" translatable="false">Material Icons</string>
    <string name="log_export_backup">Save backup</string>
    <string name="log_import_backup">Load backup</string>
    <string name="log_import_select_file">Select file</string>
    <string name="download_filemanager">Please download a file manager</string>
    <string name="log_import_warning">The backup will be ADDED to the current log. Consider creating backup of the current log. If you don\'t want current log, delete it before loading backup.</string>
    <string name="log_import_loading_info">Loading info&#8230;</string>
    <string name="log_import_failed">Loading failed</string>
    <string name="log_import_file_empty">File is empty</string>
    <string name="log_import_backup_loading">Loading backup&#8230;</string>
    <string name="log_import_backup_import_button">Import</string>
    <string name="log_import_backup_finished">Import finished</string>

    <string name="deleted">Deleted</string>

    <string name="offset">Offset</string>
    <string name="multiplier">Multiplier</string>

    <string name="adjustment_info">You can use the value adjustment fields above to fix sensor range. Sensors on some devices report incorrect values. Some sensors can have their value divided by 10, 100, or 1000 or their values can be offset by 273,15 °C.</string>
    <string name="yandex_temperature_text_view">Yandex Weather will be here</string>
</resources>
