<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ temperature-android
  ~ Copyright (C) 2018  jiwopene
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ jiwopene@gmail.com
  ~ https://gitlab.com/jiwopene/temperature-android
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/refresh"
        android:checkable="false"
        android:icon="@drawable/round_refresh_white_24"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/find_by_date"
        android:icon="@drawable/round_date_range_white_24"
        android:title="@string/log_find_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/round_settings_white_24"
        android:title="@string/log_settings"
        app:showAsAction="always" />
    <item
        android:title="@string/log_delete"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/delete_only_this"
                android:title="@string/log_delete_only_this_sensor" />
            <item
                android:id="@+id/delete_all"
                android:title="@string/log_delete_all_sensors" />
        </menu>
    </item>
    <item
        android:id="@+id/export_csv"
        android:title="@string/log_export_csv"
        app:showAsAction="never" />


</menu>