<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ temperature-android
  ~ Copyright (C) 2018  jiwopene
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ jiwopene@gmail.com
  ~ https://gitlab.com/jiwopene/temperature-android
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/log"
        app:showAsAction="always"
        android:icon="@drawable/round_list_alt_white_24"
        android:title="@string/show_log" />

    <item
        android:id="@+id/refresh_sensors"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/refresh_sensors"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_hidden"
        android:checkable="true"
        android:title="@string/show_hidden_sensors"
        />

    <item
        android:id="@+id/about"
        android:title="@string/about_app"
        />
</menu>